--- a/README
+++ b/README
@@ -7,6 +7,4 @@ For conserving the memory, datasets themselves are not included. Nevertheless, a
 --------------
 If you have any questions about this project, please do not hesitate to contact me.
 Shengke, Xue
-e-mail: xueshengke@zju.edu.cn
-		xueshengke1993@163.com
-		xueshengke1993@gmail.com
+e-mail: xueshengke@zju.edu.cn, xueshengke1993@163.com, or xueshengke1993@gmail.com
